cats-deploy/jira-dashboard/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jira-dashboard
  namespace: jira-dashboard-dev
spec:
  selector:
    app: jira-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
